--- a/style.css
+++ b/style.css
@@ -1,374 +1,230 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+
 html{
     scroll-snap-type: both mandatory;
-    overflow: scroll;
+    font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
+
+    overflow-y: scroll;    
+    overflow-x: hidden;
+    margin: 0;
+    height: calc(100vh - 200px);
+    width: 100%;
+}
+body{
+    margin:0;
+    height: fit-content;
+    width: fit-content;
 }
 
-.page-Wrapper{
-    display: grid;
+.header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    height: 100px;
+    background-color: #222;
+    z-index: 100;
 
-    grid-template-columns: 100vw 100vw 100vw;
-    grid-template-rows: 100vh 100vh 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-direction: row;
 }
 
+.header-button{
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: whitesmoke;
 
+    display: flex;
+    font-size: xx-large;
+    justify-content: center;
+    align-items: center;
 
-
-
-
-
-
+    cursor: pointer;
+    text-decoration: none;
+}
 
 .page{
-    scroll-snap-align: start;
+    height: calc(100vh - 100px);
 }
 
-.projects-wrapper{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-color: green;
-
-    width: 100vw;
-    height: 100vh;
+.page-header{
+    height: 100px;
+    background-color: #666;
 
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.project-item-wrapper{
-    width: 25%;
-    height: 50%;
-    display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-.project-item{
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-}
-.project-item-wrapper:hover>.project-item{
-    width: 80%;
-    height: 80%;
-    transition: 0.5s;
-}
+.page-content{
+    height: calc(100vh - 200px);
 
-.project-item-wrapper:nth-child(1)>.project-item{
-    background-color: red;
+    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
-.project-item-wrapper:nth-child(2)>.project-item{
-    background-color: blue;
-}
-.project-item-wrapper:nth-child(3)>.project-item{
-    background-color: green;
-}
-.project-item-wrapper:nth-child(4)>.project-item{
-    background-color: yellow;
-}
-.project-item-wrapper:nth-child(5)>.project-item{
-    background-color: purple;
-}
-.project-item-wrapper:nth-child(6)>.project-item{
-    background-color: orange;
-}
-.project-item-wrapper:nth-child(7)>.project-item{
-    background-color: pink;
-}
-.project-item-wrapper:nth-child(8)>.project-item{
-    background-color: brown;
-}
-
-
-
-.about-wrapper{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    background-color: red;
-
-    width: 100vw;
-    height: 100vh;
-}
-
-.contact-wrapper{
-    grid-column: 3/4;
-    grid-row: 2/3;
-    background-color: orange;
-
-    width: 100vw;
-    height: 100vh;
-}
-
-.other-wrapper {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    background-color: purple;
-
-    width: 100vw;
-    height: 100vh;
-}
-
 
 .title-wrapper{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    background-color: blue;
-
-    width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 200px);
+    padding-bottom: 100px;
 }
 
-/* title page */
 .name-wrapper{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
+    height: calc(100vh - 200px);
+    font-size: 150px;
 }
-
-.title-wrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-}
-
 
 .name{
-    font-size: 100px;
-    display: inline-flex;
-    height: fit-content;
+    display: flex;
+    height: 190px;
 }
-
-.navsvg{
-    width: 50px;
-    height: 50px;
-}
-
-.name>*{
-    margin-top: 30px;
-    margin-bottom: 0px;
-    transition: 0.5s;
-}
-.name[data-shown="true"]>*{
-    animation: fadeIn 2s forwards;
-}
-
-.name>*:hover{
-    margin-bottom: 30px;
-    margin-top: 0px;
-    transition: 0.5s;
-}
-
 .name-letter{
-    opacity: 0;
-}
-
-.name-letter:nth-child(1){
-    animation-delay: 0s;
-}
-.name-letter:nth-child(2){
-    animation-delay: 0.25s;
-}
-.name-letter:nth-child(3){
-    animation-delay: 0.5s;
-}
-.name-letter:nth-child(4){
-    animation-delay: 0.75s;
-}
-.name-letter:nth-child(5){
-    animation-delay: 1s;
-}
-.name-letter:nth-child(6){
-    animation-delay: 1.25s;
-}
-
-.link-Wrapper{
-    position: absolute;
-    left: 50%;
-    top:50%;
+    display: inline-block;
+    margin: 20px 0 0 0;
+    transition: margin 0.25s;
 }
 
 
-
-.underline{
-    width: 0px;
-    height: 5px;
-    background-color: black;
-    margin-top: -10px;
-    transition: 0.5s;
-}
-.underline[data-shown="true"]{
-    animation:  underline 2s forwards;
+.name-letter:hover{
+    margin: 0 0 20px 0;
 }
 
-.home-link-wrapper{
-    height: min(35vw , 35vh);
-    position: absolute;
-    left: calc(50% - 5vw);
-    top: max(-32vw , -32vh);
-    animation: firstLink-1 2s forwards;
+.name-letter::after{
+    content: '';
     display: block;
+    width: calc(100%-8px);
+    height: 0px;
+
+    border: 4px solid black;
+
+    border-bottom: none;
+    margin-top: -20px;
+    transition: height 0.25s , 
+                border-top-left-radius 0.25s, 
+                border-top-right-radius 0.25s, 
+                margin-top 0.25s;
+
+}
+.name-letter:hover::after{
+    height: 16px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    margin-top: -16px;
 }
 
-.home-link{
-    width: 10vw;
-    height: 10vw;
-    cursor: pointer;
+.name-letter:nth-child(1)::after{
+    background-color: red;
+}
+.name-letter:nth-child(2)::after{
+    background-color: orange;
+}
+.name-letter:nth-child(3)::after{
+    background-color: yellow;
+}
+.name-letter:nth-child(4)::after{
+    background-color: green;
+}
+.name-letter:nth-child(5)::after{
+    background-color: indigo;
+}
+.name-letter:nth-child(6)::after{
+    background-color: violet;
+}
+
+
+.name-letter.spacing{
+    margin: 20px 0 20px 0;
+}
+
+#name-2{
+    margin-left: 150px;
+}
+
+
+.mosaic-page{
+    height: calc(100vh - 100px);
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+
+
+.colorful:nth-child(1){
+    background-color: red;
+}
+.colorful:nth-child(2){
+    background-color: orange;
+}
+.colorful:nth-child(3){
+    background-color: yellow;
+}
+.colorful:nth-child(4){
+    background-color: green;
+}
+.colorful:nth-child(5){
+    background-color: indigo;
+}
+.colorful:nth-child(6){
+    background-color: violet;
+}
+.colorful:nth-child(7){
+    background-color: blue;
+}
+
+
+.mosaic:nth-child(1){
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    font-size: 75px;
+}
+.mosaic:nth-child(2){
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+    font-size: 50px;
+}
+.mosaic:nth-child(3){
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    font-size: 40px;
+}
+.mosaic:nth-child(4){
+    grid-column: 4 / 5;
+    grid-row: 2 / 4;
+}
+.mosaic:nth-child(5){
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+}
+.mosaic:nth-child(6){
+    grid-column: 2 / 4;
+    grid-row: 3 / 5;
+}
+.mosaic:nth-child(7){
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+    font-size: 40px;
+}
+
+.mosaic{
+    transition: margin 0.25s; 
     display: flex;
-    align-items: center;
     justify-content: center;
-
-    background: none;
-    border: none;
-    font-size: x-large;
-}
-
-.home-link:hover{
-    font-size: xx-large;
-}
-
-
-.home-link-wrapper{
-    transform-origin: bottom;
-}
-.home-link-wrapper:nth-child(1){
-    animation: Link-1 2s forwards;
-}
-.home-link-wrapper:nth-child(1)>.home-link{
-    animation: Link-inner-1 2s forwards;
-}
-
-.home-link-wrapper:nth-child(2){
-    animation: Link-2 2s forwards;
-}
-.home-link-wrapper:nth-child(2)>.home-link{
-    animation: Link-inner-2 2s forwards;
-}
-
-.home-link-wrapper:nth-child(3){
-    animation: Link-3 2s forwards;
-}
-.home-link-wrapper:nth-child(3)>.home-link{
-    animation: Link-inner-3 2s forwards;
-}
-
-
-.home-link-wrapper:nth-child(4){
-    animation: Link-4 2s forwards;
-}
-.home-link-wrapper:nth-child(4)>.home-link{
-    animation: Link-inner-4 2s forwards;
-}
-
-.inner-wrapper{
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: min(80vw , 80vh);
-    height: min(80vw , 80vh);
-    background-color: gray;
-    border-radius: 50%;
+}
+.mosaic:hover{
+    margin: -30px;
+    z-index: 100;
 }
 
-
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 100%;}
-  }
-
-@keyframes underline {
-    from {width: 0;}
-    to {width: 100%;}
-  }
-
-
-
-@keyframes Link-1 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(315deg);
-    }
+.mosaic>img{
+    width: calc(100vh - 200px);
+    object-fit: cover;
 }
-@keyframes Link-inner-1 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-315deg);
-    }
-}
-
-
-@keyframes Link-2 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(225deg);
-    }
-}
-@keyframes Link-inner-2 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-225deg);
-    }
-}
-
-
-@keyframes Link-3 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(135deg);
-    }
-}
-@keyframes Link-inner-3 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-135deg);
-    }
-}
-
-
-@keyframes Link-4 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(45deg);
-    }
-}
-@keyframes Link-inner-4 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-45deg);
-    }
-}
-
-@keyframes color {
-    from {
-        color: black;
-        background-color: white;
-    }
-    to {
-        color: white;
-        background-color: black;
-    }
-}
-
-/* About Me */
