--- a/style.css
+++ b/style.css
@@ -5,16 +5,21 @@ html{
     scroll-snap-type: both mandatory;
     font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
 
-    overflow-y: scroll;    
-    overflow-x: hidden;
     margin: 0;
-    height: calc(100vh - 200px);
     width: 100%;
 }
 body{
     margin:0;
     height: fit-content;
     width: fit-content;
+}
+.content{
+    height: calc(100vh - 100px);
+    width: 100%;
+    scroll-snap-type: y proximity;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .header{
@@ -47,7 +52,8 @@ body{
 }
 
 .page{
-    height: calc(100vh - 100px);
+    scroll-snap-align: start;
+    height: 100%;
 }
 
 .page-header{
@@ -70,6 +76,9 @@ body{
 .title-wrapper{
     height: calc(100vh - 200px);
     padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .name-wrapper{
@@ -77,7 +86,6 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: calc(100vh - 200px);
     font-size: 150px;
 }
 
@@ -227,4 +235,46 @@ body{
 .mosaic>img{
     width: calc(100vh - 200px);
     object-fit: cover;
+}
+
+
+.columns{
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(3, 33%);
+    height: calc(100vh - 400px);
+}
+.left{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+.right{
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+.bottom{
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    display: flex;
+    flex-direction: column;
+}
+.bottom>h2{
+    align-self: center;
+}
+
+.timetable-item{
+    display: flex;
+    flex-direction: row;
+}
+.timetable-item::before{
+    content: "";
+    background-color: black;
+    width: 2px;
+    margin-right: 10px;
+}
+.timetable-body{
+    margin-left: 30px;
+}
+.timetable-body>p{
+    margin: 0 0 0 20px;
 }
